syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/agent/agent";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

package agent;

service RemoteControl {
  rpc GetHealth(google.protobuf.Empty) returns (AgentHealth);
}

message AgentHealth {
  google.protobuf.Duration Uptime = 1;
}